spacing issue in bidDetail page fixed

--- a/src/assets/styles/bids/bidsDetail.scss
+++ b/src/assets/styles/bids/bidsDetail.scss
@@ -394,6 +394,9 @@
         border-bottom: 1px solid #f1f1f1;
 
         .title-desc {
+          .v-btn--icon.v-size--default {
+            height: 20px !important;
+          }
 
           div {
             font-size: 16px;
